# ducketh

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml  pr.yml  release.yml
src/: abis_manager.rs  lib.rs  main.rs
test-data/abis/: random.txt  rcl-rewards-manager.json  term-erc20-rewards.json  term-erc20-rewards.txt
test-data/abis/inner/: IERC20-only-abi.json  rcl.json
